// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Desktop file generation > generates with custom executable name 1`] = `
"[Desktop Entry]
Type=Application
Icon=open-orpheus
Name=Open Orpheus
Exec=zypak-wrapper %U

StartupNotify=true
Categories=AudioVideo;Audio;Player;Network
MimeType=audio/mpeg;audio/wav;audio/x-wav;audio/flac;audio/ogg;audio/x-m4a

Comment=An open-source Netease Cloud Music client
Comment[zh_CN]=一个开源的网易云音乐客户端

GenericName=Music Player
GenericName[zh_CN]=音乐播放器

Keywords=Netease Cloud Music;Music;Player;Online Music
Keywords[zh_CN]=网易云音乐;音乐;播放器;在线音乐
"
`;

exports[`Desktop file generation > generates with default options 1`] = `
"[Desktop Entry]
Type=Application
Icon=open-orpheus
Name=Open Orpheus
Exec=open-orpheus %U

StartupNotify=true
Categories=AudioVideo;Audio;Player;Network
MimeType=audio/mpeg;audio/wav;audio/x-wav;audio/flac;audio/ogg;audio/x-m4a

Comment=An open-source Netease Cloud Music client
Comment[zh_CN]=一个开源的网易云音乐客户端

GenericName=Music Player
GenericName[zh_CN]=音乐播放器

Keywords=Netease Cloud Music;Music;Player;Online Music
Keywords[zh_CN]=网易云音乐;音乐;播放器;在线音乐
"
`;
